--- a/package.json
+++ b/package.json
@@ -9,39 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~5.0.4",
+    "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.2",
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "expo": "^53.0.9",
-    "expo-image-picker": "~16.1.4",
-    "expo-location": "~18.1.5",
-    "expo-status-bar": "~2.2.3",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
+    "expo": "~52.0.37",
+    "expo-image-picker": "~16.0.6",
+    "expo-location": "~18.0.7",
+    "expo-status-bar": "~2.0.1",
     "lucide-react-native": "^0.477.0",
-    "mongoose": "^8.15.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
     "react-native-elements": "^3.4.3",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-maps": "1.20.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-permissions": "^5.2.5",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0",
+    "react-native-web": "~0.19.13",
     "react-native-web-maps": "^0.3.0"
   },
   "devDependencies": {
