--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.2",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "expo": "~52.0.37",
     "expo-image-picker": "~16.0.6",
     "expo-location": "~18.0.7",
     "expo-status-bar": "~2.0.1",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react-native": "^0.477.0",
+    "mongoose": "^8.15.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-elements": "^3.4.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "1.18.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-permissions": "^5.2.5",
     "react-native-picker-select": "^9.3.1",
