--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.2",
     "bcryptjs": "^3.0.2",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "expo": "~52.0.37",
     "expo-image-picker": "~16.0.6",
@@ -29,6 +30,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-ble-plx": "^3.5.0",
+    "react-native-date-picker": "^5.0.12",
     "react-native-elements": "^3.4.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
